[package]
name = "nopulp"
version = "0.1.0"
authors = ["Alexandre Lavoie <alexandre.lavoie00@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "html"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.61"
base64 = "0.12.3"
nopulp_html = { path="./html", version = "0.1.0" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'CssStyleDeclaration',
  'Location',
  'EventListener',
  'MouseEvent'
]