[package]
name = "nopulp"
version = "0.1.0"
authors = ["Alexandre Lavoie <alexandre.lavoie00@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "components",
  "core",
  "html",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.61"
nopulp_components = { path="./components", version = "0.1.0" }
nopulp_core = { path="./core", version = "0.1.0" }
nopulp_html = { path="./html", version = "0.1.0" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'CssStyleDeclaration',
  'Location',
  'EventListener',
  'MouseEvent',
  'HtmlImageElement'
]