[package]
name = "nopulp_components"
version = "0.1.0"
authors = ["Alexandre Lavoie <alexandre.lavoie00@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nopulp_core = { path="../core", version="0.1.0" }
base64 = "0.12.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'HtmlImageElement'
]