[package]
name = "nopulp_core"
version = "0.1.0"
authors = ["Alexandre Lavoie <alexandre.lavoie00@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.61"
downcast-rs = "1.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'CssStyleDeclaration',
  'Location',
  'EventListener',
  'MouseEvent'
]