[package]
name = "sitemask-hello-world"
version = "0.1.0"
authors = ["Alexandre Lavoie <alexandre.lavoie00@gmail.com>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
nopulp = { version="0.1.0", path = "../../" }
nopulp_html = { version="0.1.0", path = "../../html" }

[dependencies.web-sys]
version = "0.3.4"